Sandbox/02-12-2025/force-app/main/default/objects/Activity/fields/Account_HubSpotActivities__c.field-meta.xml
<CustomField>
    <fullName>Account_HubSpotActivities__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account (HubSpot Activities)</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>HubSpot Activities</relationshipLabel>
    <relationshipName>Account_HubSpotActivities</relationshipName>
    <type>Lookup</type>
</CustomField>