Sandbox/02-12-2025/force-app/main/default/objects/Activity/fields/Company_Leads_for_HubSpot_Activities__c.field-meta.xml
<CustomField>
    <fullName>Company_Leads_for_HubSpot_Activities__c</fullName>
    <formula>Lead_HubSpotActivities__r.Company</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company (Leads for HubSpot Activities)</label>
    <type>Text</type>
</CustomField>