Sandbox/02-12-2025/force-app/main/default/objects/Activity/fields/Contact_ID_HS__c.field-meta.xml
<CustomField>
    <fullName>Contact_ID_HS__c</fullName>
    <formula>Casesafeid(Contact_HubSpotActivities__r.Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact ID (HS)</label>
    <type>Text</type>
</CustomField>