Sandbox/02-12-2025/force-app/main/default/objects/Activity/fields/Count_of_Events__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Events__c</fullName>
    <description>Count of all events</description>
    <formula>IF( IsTask,0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Count of all events</inlineHelpText>
    <label>Count of Events</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>