Sandbox/02-12-2025/force-app/main/default/objects/Activity/fields/Count_of_Tasks__c.field-meta.xml
<CustomField>
    <fullName>Count_of_Tasks__c</fullName>
    <formula>IF( IsTask,1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Count of Tasks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>