Sandbox/02-12-2025/force-app/main/default/objects/Activity/fields/Create_Follow_up_Task__c.field-meta.xml
<CustomField>
    <fullName>Create_Follow_up_Task__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Tick this box to automatically create a follow-up task for this activity.</inlineHelpText>
    <label>Create Follow-up Task</label>
    <type>Checkbox</type>
</CustomField>