Sandbox/02-12-2025/force-app/main/default/objects/Activity/fields/Created_by_Current_User_s_Team__c.field-meta.xml
<CustomField>
    <fullName>Created_by_Current_User_s_Team__c</fullName>
    <formula>IF( CreatedBy.Division  = $User.Division , 1 , 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Created by Current User&apos;s Team</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>