Sandbox/02-12-2025/force-app/main/default/objects/Activity/fields/Lead_HubSpotActivities__c.field-meta.xml
<CustomField>
    <fullName>Lead_HubSpotActivities__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lead (HubSpot Activities)</label>
    <referenceTo>Lead</referenceTo>
    <relationshipLabel>HubSpot Activities</relationshipLabel>
    <relationshipName>Lead_HubSpotActivities</relationshipName>
    <type>Lookup</type>
</CustomField>