Sandbox/02-12-2025/force-app/main/default/objects/Activity/fields/Marketing_Email_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Marketing_Email_Activity_Type__c</fullName>
    <formula>IF(BEGINS(Subject, &quot;Sent&quot;),&quot;Marketing Email Sent&quot;,
IF(BEGINS(Subject,&quot;Opened&quot;),&quot;Marketing Email Opened&quot;,
IF(BEGINS(Subject,&quot;Clicked&quot;),&quot;Marketing Email Clicked&quot;,
IF(BEGINS(Subject,&quot;Submitted Form&quot;),&quot;Marketing Form Submitted&quot;,
&quot;&quot;))))</formula>
    <label>Marketing Email Activity Type</label>
    <type>Text</type>
</CustomField>