Sandbox/02-12-2025/force-app/main/default/objects/Activity/fields/Reminder_Followup__c.field-meta.xml
<CustomField>
    <fullName>Reminder_Followup__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reminder</label>
    <type>Checkbox</type>
</CustomField>