Sandbox/02-12-2025/force-app/main/default/objects/Activity/fields/Source_General__c.field-meta.xml
<CustomField>
    <fullName>Source_General__c</fullName>
    <label>Source (General)</label>
    <length>250</length>
    <type>Text</type>
</CustomField>