Sandbox/02-12-2025/force-app/main/default/objects/Activity/fields/Strategic_Contact__c.field-meta.xml
<CustomField>
    <fullName>Strategic_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Strategic Contact</label>
    <referenceTo>Strategic_Contact__c</referenceTo>
    <relationshipLabel>Activities</relationshipLabel>
    <relationshipName>Activities_Strategic_Contact</relationshipName>
    <type>Lookup</type>
</CustomField>