Sandbox/02-12-2025/force-app/main/default/objects/Activity/fields/Tier__c.field-meta.xml
<CustomField>
    <fullName>Tier__c</fullName>
    <formula>TEXT(Account.Tiers__c)</formula>
    <label>Tier</label>
    <type>Text</type>
</CustomField>